--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,6 +1,6 @@
 .home__hero-section {
     /* color: #fff; */
-    padding: 120px;
+    padding: 110px;
 }
 
 .home__hero-row {
@@ -17,9 +17,9 @@
 }
 
 .col {
-    margin-bottom: 15px;
+    /* margin-bottom: 15px;
     padding-right: 15px;
-    padding-left: 15px;
+    padding-left: 15px; */
     flex: 1;
     max-width: 50%;
     flex-basis: 50%;
@@ -42,6 +42,7 @@
 }
 
 .heading {
+    min-width: 400px;
     margin-bottom: 24px;
     font-size: 48px;
     line-height: 1.1;
